Fixed bar gap and formatted name card

--- a/myWebsite.css
+++ b/myWebsite.css
@@ -5,9 +5,26 @@ body {
     margin: 0%;
 }
 
+h1 {
+    font-family: 'Open Sans';
+    font-size: 150px;
+    font-weight: 800;
+    color: #5065a7;
+    font-style: italic;
+    text-shadow: #f2eee3 2px 2px;
+    text-align: left;
+}
+
+#logo {
+    position: fixed;
+    margin: 0;
+    padding: 0;
+    width: 150px; 
+    height: 150px;
+}
 .nav {
     list-style-type: none;
-    margin: 0;
+    margin-top: 150px;
     padding: 0;
     width: 150px;
     background-color: slategray;
@@ -26,7 +43,7 @@ li a {
     padding: 20px 10px;
 }
 
-li:first-child {
+li :first-child {
     margin-top: 20%;
 }
 
@@ -35,14 +52,9 @@ li:hover {
 }
 
 #name-card {
-    background-color: blue;
-    border-radius: 20px;
-    width: 300px;
-    height: 400px;
-    position: relative;
-    margin-left: 200px;
-}
-
-h1 {
-    font-family: 'Open Sans';
+    position: absolute;
+    left: 20%;
+    top: 275px;
+    padding: 40px;
+    margin: auto;
 }
